...


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_title"
        app:layout_constraintTop_toBottomOf="@+id/txt_title">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="start"
            android:singleLine="true"
            android:text="@string/title_hint"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/txt_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/title_hint" />

...
